@@ -2,13 +2,13 @@ image: $CI_REGISTRY/$CI_PROJECT_PATH/igt-fedora:latest
 variables:
   MESON_OPTIONS: >
     -Dwith_libdrm=intel,nouveau,amdgpu
-    -Dbuild_overlay=true
-    -Dbuild_chamelium=true
-    -Dwith_valgrind=true
-    -Dbuild_man=true
-    -Dbuild_tests=true
-    -Dbuild_runner=true
-    -Dwith_libunwind=true
+    -Dbuild_overlay=enabled
+    -Dbuild_chamelium=enabled
+    -Dwith_valgrind=enabled
+    -Dbuild_man=enabled
+    -Dbuild_tests=enabled
+    -Dbuild_runner=enabled
+    -Dwith_libunwind=enabled
   LANG: "C.UTF-8"
 
 stages:
