@@ -3,7 +3,9 @@ Unreleased
 
 General changes:
 
- - Bumped required meson version to 0.46. (Arkadiusz Hiler)
+ - Bumped required meson version to 0.47. (Arkadiusz Hiler)
+ - All the meson build options that used auto, true and false are now first
+   class 'feature' options taking auto, enabled and disabled  (Arkadiusz Hiler)
 
 Release 1.23 (2018-07-18)
 -------------------------
